--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,8 @@
 {
     "presets": [
         [
-            "next/babel",
-            {
-                "preset-react": {
-                    "runtime": "automatic",
-                    "importSource": "react"
-                }
-            }
+            "next/babel"
         ]
-    ]
+    ],
+    "plugins": []
 }
