--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,16 @@ next-env.d.ts
 # IDE
 .idea
 .vscode
+
+# Logs
+logs
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
