--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "*",
+    "@ant-design/cssinjs": "^1.18.4",
+    "@ant-design/icons": "^5.3.0",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "*",
     "@radix-ui/react-select": "*",
+    "antd": "^5.14.2",
     "autoprefixer": "*",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "*",
     "clsx": "*",
     "google-ads-api": "^17.1.0-rest-beta",
     "google-ads-node": "*",
     "jsforce": "^3.6.2",
     "lucide-react": "*",
-    "next": "*",
+    "next": "^14.0.4",
     "next-auth": "*",
     "openai": "*",
     "postcss": "*",
-    "react": "*",
-    "react-dom": "*",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "recharts": "*",
     "tailwind-merge": "*",
     "tailwindcss": "*",
