--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,10 @@
         "./src/*"
       ]
     },
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
   },
   "include": [
     "next-env.d.ts",
