--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@babel/preset-typescript": "*",
     "@babel/runtime": "*",
     "@types/node": "*",
-    "@types/react": "*",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "*",
     "babel-loader": "*",
     "prisma": "*",
