--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# .gitignore
-
 # dependencies
 /node_modules
 /.pnp
@@ -24,7 +22,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
+# local env files
+.env*.local
 
 # vercel
 .vercel
@@ -33,10 +32,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# prisma
-/prisma/dev.db
-/prisma/dev.db-journal
-
-# IDE
-.idea
-.vscode
+# Large files
+*.pack
+*.node
+  
